# demo

./: CMakeLists.txt
include/: getNumber.h  machLight.h
src/: getNumber.cpp  machLight.cpp  main.cpp
